--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -38,7 +38,7 @@
     width: 1rem;
     height: 1rem;
     display: inline-block;
-    background-image: url('/assets/icons/calendar.svg');
+    background-image: url('assets/icons/calendar.svg');
     background-repeat: no-repeat;
     background-size: contain;
     margin-right: .5rem;
