--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,7 +5,7 @@
     position: relative;
 }
 .header::after {
-    background-image: url('/assets/icons/header.svg');
+    background-image: url('assets/icons/header.svg');
     background-repeat: no-repeat;
     content: '';
     width: 2rem;
@@ -52,22 +52,22 @@
 }
 
 .information .profile::before {
-    background-image: url('/assets/icons/profile.svg');
+    background-image: url('assets/icons/profile.svg');
     background-repeat: no-repeat;
 }
 
 .information .email::before {
-    background-image: url('/assets/icons/email.svg');
+    background-image: url('assets/icons/email.svg');
     background-repeat: no-repeat;
 }
 
 .information .location::before {
-    background-image: url('/assets/icons/location.svg');
+    background-image: url('assets/icons/location.svg');
     background-repeat: no-repeat;
 }
 
 .information .whatsapp::before {
-    background-image: url('/assets/icons/whatsapp.svg');
+    background-image: url('assets/icons/whatsapp.svg');
     background-repeat: no-repeat;
 }
 
