--- a/assets/css/languages.css
+++ b/assets/css/languages.css
@@ -22,7 +22,7 @@
     width: 1rem;
     height: 1rem;
     display: inline-block;
-    background-image: url('assets/icons/check.svg');
+    background-image: url('/assets/icons/check.svg');
     background-repeat: no-repeat;
     background-size: contain;
     margin-right: .5rem;
