--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -37,7 +37,7 @@
     display: inline-block;
     width: 1.5rem;
     height: 1.5rem;
-    background-image: url('/assets/icons/arrow-top.svg');
+    background-image: url('../icons/arrow-top.svg');
     background-repeat: no-repeat;
     background-size: contain;
     transition: .25s;
