--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -20,7 +20,7 @@ li a:hover{
 
 @font-face {
     font-family: Neue Machine;
-    src: url('/assets/fonts/neue-machina-Regular.otf');
+    src: url('../fonts/neue-machina-Regular.otf');
 }
 
 body {
@@ -38,7 +38,7 @@ body {
 .main::before, 
 .main::after {
     content: '';
-    background-image: url('/assets/img/background.svg');
+    background-image: url('../img/background.svg');
     background-size: contain;
     background-repeat: no-repeat;
     display: inline-block;
