--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -32,7 +32,7 @@
     width: 1rem;
     height: 1rem;
     display: inline-block;
-    background-image: url('/assets/icons/github.svg');
+    background-image: url('../icons/github.svg');
     background-repeat: no-repeat;
     background-size: contain;
     margin-right: .5rem;
