--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -12,19 +12,17 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-bottom: 1rem;
     margin: 1rem 0;
-    padding: 1rem;
-    font-size: 1rem;
 }
 
 .portfolio  li .title{
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: .5rem;
     font-size: 1.25rem;
     font-weight: 700;
+    margin: 0;
+    margin-bottom: .5rem;
 }
 
 .portfolio  li span::before{
